--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
 <li>Automation of the data exchange process</li>
 <li>Quick and flawless performance</li>
 </ul><h3>
+<a name="main-transconnect-page" class="anchor" href="#main-transconnect-page"><span class="octicon octicon-link"></span></a>Main TransConnect page</h3>
+
+<p><a href="http://www.trans.eu/en/transconnect">http://www.trans.eu/en/transconnect</a></p>
+
+<h3>
+<a name="transconnect-api-manual" class="anchor" href="#transconnect-api-manual"><span class="octicon octicon-link"></span></a>TransConnect API manual</h3>
+
+<p><a href="http://manual.api.trans.eu">http://manual.api.trans.eu</a></p>
+
+<h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Please call us at +44 203 00 25 919 or e-mail <a href="mailto:api@trans.eu">api@trans.eu</a></p>
